[Qt] Use the default timeout interval for JS as the HTML tokenizer delay for setHtml()

Patch by Tor Arne Vestbø <tor.arne.vestbo@nokia.com> on 2009-10-30
Reviewed by Kenneth Rohde Christiansen.

This ensures that long-running JavaScript (for example due to a modal alert() dialog),
will not trigger a deferred load after only 500ms (the default tokenizer delay) while
still giving a reasonable timeout (10 seconds) to prevent deadlock.

https://bugs.webkit.org/show_bug.cgi?id=29381

JavaScriptCore:

* runtime/TimeoutChecker.h: Add getter for the timeout interval

WebKit/qt:

* Api/qwebframe.cpp: Document the behaviour
* WebCoreSupport/FrameLoaderClientQt.cpp: set the custom tokenizer delay for substitute loads
* tests/qwebframe/tst_qwebframe.cpp: Add test

Canonical link: https://commits.webkit.org/54868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64036 268f45cc-cd09-0410-ab3c-d52691b4dbfc